# Bert4NER

./: .gitignore  config.ini  main.py  predict.py  pyproject.toml
llm/: bert_bilstm_crf.py
models/hfl/chinese-bert-wwm-ext/models--hfl--chinese-bert-wwm-ext/refs/: main
utils/: data_loader.py  data_processor.py  ner_config.py  project_path.py
